Revision history for Code-TidyAll

** denotes an incompatible change

0.12  Sep 21, 2012

0.11  Sep 21, 2012

* Improvements
  - Allow multiple select and ignore patterns, separated by whitespace or on separate lines
  - Add -l/--list flag to show which plugins match which files
  - Add conf_name parameter to specify name other than tidyall.ini
  - Redirect stdout to stderr with -p/--pipe, so that stdout is dedicated to the tidied content
  - In tidyall.el, hide error buffer on successful tidy

* Fixes
  - Handle argv/config errors correctly in various plugins
  - Eliminate double-printed error with -p/--pipe
  - Allow relative paths to -p/--pipe

0.10  Sep 12, 2012

* Improvements
  - Add masontidy plugin (Mason component tidier)
  - Add jslint plugin (javascript validator)

0.09  Sep 11, 2012

* Fixes
  - Remove use of ex-dependency Hash::MoreUtils from bin/tidyall (Jason Wieland)
  - Add IPC::System::Simple and Pod::Usage to deps (Jason Wieland)

0.08  Sep 10, 2012

* Improvements
  - Add js-beautify plugin (javascript tidier)
  - Add jshint plugin (javascript validator)
  - Add podchecker plugin
  - Add -p/--pipe flag to read from STDIN and write to STDOUT
  - Allow tidyall.el to work in narrowed regions
  - Make plugins into Moo classes, pass configuration as attributes

* Fixes
  - Remove unused SVN::Look - perl-code-tidyall/pull/1 (Pedro Melo)
  - Filter just files from git status in Code::TidyAll::Git::Precommit (Pedro Melo)

0.07  Sep 5, 2012

* Improvements
  - Add git pre-receive hook (Code::TidyAll::Git::Prereceive)

* Fixes
  - Show file paths with errors in quiet mode

0.06  Sep 3, 2012

* Improvements
  - Add -g/--git flag and git pre-commit hook (Code::TidyAll::Git::Precommit)

* Fixes
  - Omit directories from svn_uncommitted_files (--svn)

0.05  Aug 21, 2012

* Improvements
  - Add etc/editors/tidyall.el for Emacs
  - Only print 'no plugins apply' warning in verbose mode

0.04  Aug 14, 2012

* Fixes
  - Add back missing plugins