@@ -1,19 +1,30 @@
 API
+CPAN
+JavaScript
 STDERR
 STDIN
 STDOUT
+Simakov
 TIDYALL
 Thalhammer
 argv
+cmd
 conf
+config
 dir
+iff
 js
 jsbeautify
 jshint
 jslint
 lib
+listref
 masontidy
 noll
+npm
+ok
+ops
+params
 perlcritic
 perlcriticrc
 perltidy
@@ -21,6 +32,7 @@ plugins
 podspell
 podtidy
 pre
+repo
 repos
 svn
 tidiers
