@@ -4,6 +4,13 @@ Revision history for Code-TidyAll
 
 0.12  Sep 21, 2012
 
+* Plugins
+  - Add podspell plugin (POD spell checker)
+
+* Improvements
+  - Allow .tidyallrc as alternative to tidyall.ini
+  - Add handcrafted usage w/summary of options, instead of Pod::Usage
+
 0.11  Sep 21, 2012
 
 * Improvements
@@ -20,7 +27,7 @@ Revision history for Code-TidyAll
 
 0.10  Sep 12, 2012
 
-* Improvements
+* Plugins
   - Add masontidy plugin (Mason component tidier)
   - Add jslint plugin (javascript validator)
 
@@ -32,9 +39,11 @@ Revision history for Code-TidyAll
 
 0.08  Sep 10, 2012
 
-* Improvements
+* Plugins
   - Add js-beautify plugin (javascript tidier)
   - Add jshint plugin (javascript validator)
+
+* Improvements
   - Add podchecker plugin
   - Add -p/--pipe flag to read from STDIN and write to STDOUT
   - Allow tidyall.el to work in narrowed regions
